[gd_scene load_steps=54 format=3 uid="uid://c1uuw3fhbal56"]

[ext_resource type="Texture2D" uid="uid://d0q1scmn6kvch" path="res://Assets/Pictures/Characters/Player/kid-male-spritesheet.png" id="1_etymb"]
[ext_resource type="Script" uid="uid://d1nsymd1ty65n" path="res://Gameplay/GameObjects/Player/character_body_2d.gd" id="1_tv2e5"]
[ext_resource type="Texture2D" uid="uid://35x2upkm4bl0" path="res://Assets/Pictures/Tilesets/bat-swing-1.png" id="4_4cjus"]
[ext_resource type="Texture2D" uid="uid://chj3u2gcjfdoj" path="res://Assets/Pictures/Tilesets/bat-swing-2.png" id="5_u1jrt"]
[ext_resource type="Script" uid="uid://dctoo17g16nlv" path="res://Gameplay/GameObjects/Player/node_2d_bat_swing.gd" id="6_ce8gb"]
[ext_resource type="Texture2D" uid="uid://w27j8e7ys4d2" path="res://Assets/Pictures/Tilesets/bat-swing-3.png" id="6_i7w8i"]
[ext_resource type="Texture2D" uid="uid://yirhm4otg8lr" path="res://Assets/Pictures/UI/SkillPanel/bullet-bill_damage.png" id="6_nm1h5"]
[ext_resource type="Theme" uid="uid://dqj6mldu4o750" path="res://Assets/Themes/HPbars.tres" id="6_u1jrt"]
[ext_resource type="Script" uid="uid://nr7wcl60fcgv" path="res://Gameplay/GameObjects/Player/WeaponSystemClasses/weapon_stats_class.gd" id="7_1yyat"]
[ext_resource type="Script" uid="uid://dxsg6rd51oc4w" path="res://Gameplay/GameObjects/Player/WeaponSystemClasses/passive_stats_class.gd" id="7_f48yh"]
[ext_resource type="FontFile" uid="uid://bptvgj4r8mdoh" path="res://Assets/Fonts/Peaberry-Font-v2.0/Peaberry-Font-v2.0/Peaberry Font Family/Peaberry Base/PeaberryBase.woff" id="7_i7w8i"]
[ext_resource type="Resource" uid="uid://dasy540ike4tb" path="res://Gameplay/GameObjects/Player/WeaponGlobalModifires.tres" id="7_iao5o"]
[ext_resource type="Texture2D" uid="uid://y0abg6vfpw5v" path="res://Assets/Pictures/UI/SkillPanel/clockwork_cooldown.png" id="8_2k83u"]
[ext_resource type="Script" uid="uid://cxaockkewnp8h" path="res://Gameplay/GameObjects/Player/node_2d_exp_weapon_system.gd" id="8_i7w8i"]
[ext_resource type="Texture2D" uid="uid://dfsnisn1w7380" path="res://Assets/Pictures/UI/SkillPanel/icon-bat.png" id="8_pkw21"]
[ext_resource type="Texture2D" uid="uid://b4pixnbillcmw" path="res://Assets/Pictures/UI/SkillPanel/ammonite-fossil_area.png" id="9_7gbd8"]
[ext_resource type="Script" uid="uid://conmjyf1vkvqv" path="res://Gameplay/GameObjects/Player/node_2d_ball.gd" id="17_f48yh"]
[ext_resource type="Texture2D" uid="uid://dxt4qloia67aq" path="res://Assets/Pictures/UI/SkillPanel/icon-baseball.png" id="18_2k83u"]
[ext_resource type="PackedScene" uid="uid://17f3jpjhuadd" path="res://Gameplay/GameObjects/Player/BaseballBall/BaseballBall.tscn" id="19_7gbd8"]
[ext_resource type="Script" uid="uid://tvuu7wsnbdij" path="res://Gameplay/GameObjects/Player/node_2d_dynamite.gd" id="20_1v357"]
[ext_resource type="Texture2D" uid="uid://8byk2iylvnxq" path="res://Assets/Pictures/UI/SkillPanel/icon-firecracker.png" id="21_gd5vw"]
[ext_resource type="PackedScene" uid="uid://binxisynbksjl" path="res://Gameplay/GameObjects/Player/Dynamite/Dynamite.tscn" id="22_7jnoq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_etymb"]
radius = 8.0
height = 22.0

[sub_resource type="Animation" id="Animation_tv2e5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_4cjus"]
resource_name = "idle_left"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}

[sub_resource type="Animation" id="Animation_gdl5x"]
resource_name = "idle_right"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_hkia7"]
resource_name = "run_left"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}

[sub_resource type="Animation" id="Animation_qc1r0"]
resource_name = "run_right"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hkia7"]
_data = {
&"RESET": SubResource("Animation_tv2e5"),
&"idle_left": SubResource("Animation_4cjus"),
&"idle_right": SubResource("Animation_gdl5x"),
&"run_left": SubResource("Animation_hkia7"),
&"run_right": SubResource("Animation_qc1r0")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tv2e5"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gdl5x"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_qc1r0"]
blend_point_0/node = SubResource("AnimationNodeAnimation_tv2e5")
blend_point_0/pos = -0.9
blend_point_1/node = SubResource("AnimationNodeAnimation_gdl5x")
blend_point_1/pos = 1.0
min_space = -0.9
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qc1r0"]
animation = &"run_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hkia7"]
animation = &"run_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_hkia7"]
blend_point_0/node = SubResource("AnimationNodeAnimation_qc1r0")
blend_point_0/pos = -0.9
blend_point_1/node = SubResource("AnimationNodeAnimation_hkia7")
blend_point_1/pos = 1.0
min_space = -0.9
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4cjus"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u1jrt"]
advance_mode = 2
advance_condition = &"move"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i7w8i"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_tv2e5"]
states/Idle/node = SubResource("AnimationNodeBlendSpace1D_qc1r0")
states/Idle/position = Vector2(359, 107)
states/Move/node = SubResource("AnimationNodeBlendSpace1D_hkia7")
states/Move/position = Vector2(542, 107)
states/Start/position = Vector2(230, 107)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_4cjus"), "Idle", "Move", SubResource("AnimationNodeStateMachineTransition_u1jrt"), "Move", "Idle", SubResource("AnimationNodeStateMachineTransition_i7w8i")]

[sub_resource type="Animation" id="Animation_i7w8i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_u1jrt"]
resource_name = "take_damage"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(4, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ce8gb"]
_data = {
&"RESET": SubResource("Animation_i7w8i"),
&"take_damage": SubResource("Animation_u1jrt")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_hkia7"]
radius = 16.0312

[sub_resource type="CircleShape2D" id="CircleShape2D_i7w8i"]
radius = 59.4138

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u1jrt"]
radius = 8.0
height = 32.0

[sub_resource type="Resource" id="Resource_1v357"]
script = ExtResource("7_f48yh")
current_level = 0
picture = ExtResource("6_nm1h5")
global_damage_modifire_per_level = 1.05
global_cooldown_modifire_per_level = 1.0
global_scale_modifire_per_level = 1.0
description_en = "+ Damage
Increases damage by 5% per level"
description_ru = "+ Урон
Повышает урон на 5% за уровень"
metadata/_custom_type_script = "uid://dxsg6rd51oc4w"

[sub_resource type="Resource" id="Resource_gd5vw"]
script = ExtResource("7_f48yh")
current_level = 0
picture = ExtResource("8_2k83u")
global_damage_modifire_per_level = 1.0
global_cooldown_modifire_per_level = 1.05
global_scale_modifire_per_level = 1.0
description_en = "+ Speed
Increases attack speed by 5% per level"
description_ru = "+ Скорость
Повышает скорость атака на 5% за уровень"
metadata/_custom_type_script = "uid://dxsg6rd51oc4w"

[sub_resource type="Resource" id="Resource_7jnoq"]
script = ExtResource("7_f48yh")
current_level = 0
picture = ExtResource("9_7gbd8")
global_damage_modifire_per_level = 1.0
global_cooldown_modifire_per_level = 1.0
global_scale_modifire_per_level = 1.05
description_en = "+ Area
Increases attack area by 5% per level"
description_ru = "+ Область
Увеличивает область атаки на 5% за уровень"
metadata/_custom_type_script = "uid://dxsg6rd51oc4w"

[sub_resource type="Resource" id="Resource_nm1h5"]
script = ExtResource("7_1yyat")
current_level = 0
picture = ExtResource("8_pkw21")
base_damage = 40.0
percent_damage_increase_with_level = 1.05
description_en = "Bat swing
+ 5 % damage, attack speed and area per level"
description_ru = "Удар битой
+ 5% урона, скорости атаки и области атаки за уровень"
percent_speed_increase_with_level = 1.05
percent_scale_increase_with_level = 1.05
link_to_global_modifires = ExtResource("7_iao5o")
metadata/_custom_type_script = "uid://nr7wcl60fcgv"

[sub_resource type="SpriteFrames" id="SpriteFrames_ce8gb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_4cjus")
}, {
"duration": 1.0,
"texture": ExtResource("5_u1jrt")
}, {
"duration": 1.0,
"texture": ExtResource("6_i7w8i")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"swing",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_u1jrt"]
radius = 31.0161

[sub_resource type="Resource" id="Resource_7gbd8"]
script = ExtResource("7_1yyat")
current_level = 0
picture = ExtResource("18_2k83u")
base_damage = 40.0
percent_damage_increase_with_level = 1.05
description_en = "Baseball ball
+ 5 % damage, attack speed and area per level"
description_ru = "Бейсбольный мяч
+ 5% урона, скорости атаки и области атаки за уровень"
percent_speed_increase_with_level = 1.05
percent_scale_increase_with_level = 1.05
link_to_global_modifires = ExtResource("7_iao5o")
metadata/_custom_type_script = "uid://nr7wcl60fcgv"

[sub_resource type="Resource" id="Resource_py2cr"]
script = ExtResource("7_1yyat")
current_level = 0
picture = ExtResource("21_gd5vw")
base_damage = 40.0
percent_damage_increase_with_level = 1.05
description_en = "Dynamite
+ 5 % damage, attack speed and area per level"
description_ru = "Динамит
+ 5% урона, скорости атаки и области атаки за уровень"
percent_speed_increase_with_level = 1.05
percent_scale_increase_with_level = 1.05
link_to_global_modifires = ExtResource("7_iao5o")
metadata/_custom_type_script = "uid://nr7wcl60fcgv"

[node name="CharacterBody2D" type="CharacterBody2D"]
position = Vector2(0, -1)
motion_mode = 1
script = ExtResource("1_tv2e5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_etymb")
hframes = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_etymb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hkia7")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_tv2e5")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/idle = 0.6
parameters/conditions/move = false
parameters/Idle/blend_position = 0.0172927
parameters/Move/blend_position = 0.6

[node name="AnimationPlayer_TakeDamage" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ce8gb")
}

[node name="Area2D_HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_HurtBox"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_hkia7")

[node name="Area2D_GatherPowerups" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_GatherPowerups"]
shape = SubResource("CircleShape2D_i7w8i")

[node name="Area2D_AbsorbPowerups" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_AbsorbPowerups"]
shape = SubResource("CapsuleShape2D_u1jrt")

[node name="Timer_ContactDamage" type="Timer" parent="."]

[node name="ProgressBar_HP" type="ProgressBar" parent="."]
offset_left = -15.0
offset_top = 17.0
offset_right = 15.0
offset_bottom = 24.0
theme = ExtResource("6_u1jrt")
theme_override_fonts/font = ExtResource("7_i7w8i")
theme_override_font_sizes/font_size = 8
value = 100.0
show_percentage = false

[node name="Node2D_ExpWeaponSystem" type="Node2D" parent="." node_paths=PackedStringArray("weapon1", "weapon2", "weapon3")]
script = ExtResource("8_i7w8i")
weapon1 = NodePath("Node2D_BatSwing")
weapon2 = NodePath("Node2D_Ball")
weapon3 = NodePath("Node2D_Dynamite")
passive1 = SubResource("Resource_1v357")
passive2 = SubResource("Resource_gd5vw")
passive3 = SubResource("Resource_7jnoq")
weapon_global_modifires = ExtResource("7_iao5o")

[node name="Node2D_BatSwing" type="Node2D" parent="Node2D_ExpWeaponSystem"]
script = ExtResource("6_ce8gb")
stats = SubResource("Resource_nm1h5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Node2D_ExpWeaponSystem/Node2D_BatSwing"]
z_index = 2
position = Vector2(40, 0)
scale = Vector2(1, 2)
sprite_frames = SubResource("SpriteFrames_ce8gb")
animation = &"swing"
frame = 1

[node name="Area2D_HitBox" type="Area2D" parent="Node2D_ExpWeaponSystem/Node2D_BatSwing"]
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D_ExpWeaponSystem/Node2D_BatSwing/Area2D_HitBox"]
position = Vector2(49, 14)
shape = SubResource("CircleShape2D_u1jrt")

[node name="Node2D_Ball" type="Node2D" parent="Node2D_ExpWeaponSystem"]
script = ExtResource("17_f48yh")
stats = SubResource("Resource_7gbd8")
baseball_ball_scene = ExtResource("19_7gbd8")

[node name="Timer" type="Timer" parent="Node2D_ExpWeaponSystem/Node2D_Ball"]
wait_time = 1.5
one_shot = true

[node name="Node2D_Dynamite" type="Node2D" parent="Node2D_ExpWeaponSystem"]
script = ExtResource("20_1v357")
stats = SubResource("Resource_py2cr")
dynamite_scene = ExtResource("22_7jnoq")

[node name="Timer" type="Timer" parent="Node2D_ExpWeaponSystem/Node2D_Dynamite"]
wait_time = 5.0

[connection signal="body_entered" from="Area2D_HurtBox" to="." method="_on_area_2d_hurt_box_body_entered"]
[connection signal="body_exited" from="Area2D_HurtBox" to="." method="_on_area_2d_hurt_box_body_exited"]
[connection signal="body_entered" from="Area2D_GatherPowerups" to="." method="_on_area_2d_gather_powerups_body_entered"]
[connection signal="body_entered" from="Area2D_AbsorbPowerups" to="." method="_on_area_2d_absorb_powerups_body_entered"]
[connection signal="timeout" from="Timer_ContactDamage" to="." method="_on_timer_contact_damage_timeout"]
[connection signal="frame_changed" from="Node2D_ExpWeaponSystem/Node2D_BatSwing/AnimatedSprite2D" to="Node2D_ExpWeaponSystem/Node2D_BatSwing" method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="Node2D_ExpWeaponSystem/Node2D_BatSwing/Area2D_HitBox" to="Node2D_ExpWeaponSystem/Node2D_BatSwing" method="_on_area_2d_hit_box_body_entered"]
[connection signal="timeout" from="Node2D_ExpWeaponSystem/Node2D_Ball/Timer" to="Node2D_ExpWeaponSystem/Node2D_Ball" method="_on_timer_timeout"]
[connection signal="timeout" from="Node2D_ExpWeaponSystem/Node2D_Dynamite/Timer" to="Node2D_ExpWeaponSystem/Node2D_Dynamite" method="_on_timer_timeout"]
